--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
          {
-             "name": "MMOServer (APP)",
+             "name": "Tii (APP)",
              "type": "coreclr",
              "request": "launch",
              "preLaunchTask": "build",
