--- a/Server/ET.Core/Server.ET.Core.csproj
+++ b/Server/ET.Core/Server.ET.Core.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework><netcoreapp3 class="1"></netcoreapp3></TargetFramework>
     <AssemblyName>ET.Core</AssemblyName>
     <RootNamespace>ET.Core</RootNamespace>
     <LangVersion>7.3</LangVersion>
