--- a/Server/ET.Core/Server.ET.Core.csproj
+++ b/Server/ET.Core/Server.ET.Core.csproj
@@ -4,12 +4,10 @@
     <AssemblyName>ET.Core</AssemblyName>
     <RootNamespace>ET.Core</RootNamespace>
     <LangVersion>7.3</LangVersion>
-    <FileUpgradeFlags>40</FileUpgradeFlags>
-    <UpgradeBackupLocation>E:\ETCore\ETServer5.0\Server\Backup\ET.Core\</UpgradeBackupLocation>
-    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
   <PropertyGroup>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;DEBUG;NETCOREAPP2_0;SERVER</DefineConstants>
